--- a/AugmentEPF/app/src/main/res/values/colors.xml
+++ b/AugmentEPF/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="gold">#FFD700</color>
     <color name="grey">#BFBFBFBF</color>
     <color name="white">#fffeff</color>
+    <color name="black">#000000</color>
     <color name="grey_white">#faf7f7f7</color>
 
 
