--- a/AugmentEPF/app/src/main/res/drawable-xxhdpi/disabled_button.xml
+++ b/AugmentEPF/app/src/main/res/drawable-xxhdpi/disabled_button.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:endColor="@color/grey"
-                android:startColor="@color/colorLightGrey" />
+                android:endColor="#717171"
+                android:startColor="#666666" />
             <stroke
                 android:width="1dp"
                 android:color="@color/colorPrimaryDark" />
@@ -23,8 +23,8 @@
         <shape>
             <gradient
                 android:angle="270"
-                android:endColor="@color/grey"
-                android:startColor="@color/colorLightGrey" />
+                android:endColor="#717171"
+                android:startColor="#666666" />
 
             <corners
                 android:radius="3dp"/>
