--- a/AugmentEPF/app/src/main/res/layout/fragment_search.xml
+++ b/AugmentEPF/app/src/main/res/layout/fragment_search.xml
@@ -2,88 +2,109 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.filiereticsa.arc.augmentepf.fragments.SearchFragment"
+    android:background="@drawable/right_background"
     android:orientation="vertical"
-    android:background="@drawable/right_background">
+    tools:context="com.filiereticsa.arc.augmentepf.fragments.SearchFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/red_search_background"
-            android:padding="5dp"
-            android:hint="Enter a Classroom, place..."
-            android:focusable="true"
-            android:focusableInTouchMode="true">
-
-            <AutoCompleteTextView
-                android:id="@+id/search_input"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="7"
-                android:background="@color/white" />
-
-            <Button
-                android:id="@+id/go_button"
-                style="@android:style/Widget.Holo.Button.Borderless.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onGoClick"
-                android:text="@string/go"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-        </LinearLayout>
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
             android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nearby_points_of_interest"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:layout_gravity="right"
-            android:textColor="@color/colorPrimaryDark"/>
 
-        <ListView
-            android:id="@+id/pi_around"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="right"
-            android:layout_margin="20dp"
-            android:background="@drawable/listview_background"
-            android:dividerHeight="0sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/red_search_background"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:hint="Enter a Classroom, place..."
+                android:orientation="horizontal"
+                android:padding="5dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/available_classrooms"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
-            android:layout_gravity="right"
-            android:textColor="@color/colorPrimaryDark"/>
+                <AutoCompleteTextView
+                    android:id="@+id/search_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="7"
+                    android:background="@color/white" />
 
-        <ListView
-            android:id="@+id/available_rooms"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:layout_gravity="right"
-            android:layout_margin="20dp"
-            android:background="@drawable/listview_background"
-            android:dividerHeight="0sp"/>
+                <Button
+                    android:id="@+id/go_button"
+                    style="@android:style/Widget.Holo.Button.Borderless.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="onGoClick"
+                    android:text="@string/go"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/next_class_button"
+                style="@style/Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/disabled_button"
+                android:gravity="center"
+                android:text="@string/go_to_next_class"
+                android:textColor="@color/white"
+                android:onClick="onNextClassClicked"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/nearby_points_of_interest"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20dp" />
+
+                <ListView
+                    android:id="@+id/pi_around"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_gravity="right"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/listview_background"
+                    android:dividerHeight="0sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/available_classrooms"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20sp" />
+
+                <ListView
+                    android:id="@+id/available_rooms"
+                    android:layout_width="200dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="right"
+                    android:layout_margin="20dp"
+                    android:background="@drawable/listview_background"
+                    android:dividerHeight="0sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
