--- a/AugmentEPF/app/src/main/res/drawable-xxhdpi/disabled_button.xml
+++ b/AugmentEPF/app/src/main/res/drawable-xxhdpi/disabled_button.xml
@@ -2,37 +2,19 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <gradient
-                android:angle="90"
-                android:endColor="#717171"
-                android:startColor="#666666" />
-            <stroke
-                android:width="1dp"
-                android:color="@color/colorPrimaryDark" />
-            <corners
-                android:radius="3dp" />
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <gradient android:angle="90" android:endColor="#717171" android:startColor="#666666" />
+            <stroke android:width="1dp" android:color="@color/colorPrimaryDark" />
+            <corners android:radius="3dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 
     <item>
         <shape>
-            <gradient
-                android:angle="270"
-                android:endColor="#717171"
-                android:startColor="#666666" />
+            <gradient android:angle="270" android:endColor="#717171" android:startColor="#666666" />
 
-            <corners
-                android:radius="3dp"/>
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <corners android:radius="3dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 </selector>
