--- a/AugmentEPF/app/src/main/res/drawable-xxxhdpi/calendar_button.xml
+++ b/AugmentEPF/app/src/main/res/drawable-xxxhdpi/calendar_button.xml
@@ -2,39 +2,19 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <gradient
-                android:angle="90"
-                android:endColor="#62c06b"
-                android:startColor="#7de386" />
-            <stroke
-                android:width="2dp"
-                android:color="@color/grey" />
-            <corners
-                android:radius="5dp" />
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <gradient android:angle="90" android:endColor="#62c06b" android:startColor="#7de386" />
+            <stroke android:width="2dp" android:color="@color/grey" />
+            <corners android:radius="5dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 
     <item>
         <shape>
-            <gradient
-                android:angle="270"
-                android:endColor="#62c06b"
-                android:startColor="#7de386" />
-            <stroke
-                android:width="1dp"
-                android:color="@color/grey" />
-            <corners
-                android:radius="5dp"/>
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <gradient android:angle="270" android:endColor="#62c06b" android:startColor="#7de386" />
+            <stroke android:width="1dp" android:color="@color/grey" />
+            <corners android:radius="5dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 </selector>
