--- a/AugmentEPF/app/src/main/res/drawable/listview_background.xml
+++ b/AugmentEPF/app/src/main/res/drawable/listview_background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/white"
+        android:angle="270"
         android:endColor="#f6f6f6"
-        android:angle="270"/>
+        android:startColor="@color/white" />
 
     <corners
         android:bottomLeftRadius="10dp"
