--- a/AugmentEPF/app/src/main/res/drawable/red_button.xml
+++ b/AugmentEPF/app/src/main/res/drawable/red_button.xml
@@ -2,36 +2,18 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <gradient
-                android:angle="90"
-                android:endColor="#dc3940"
-                android:startColor="#eb1923" />
-            <stroke
-                android:width="1dp"
-                android:color="#303030" />
-            <corners
-                android:radius="5dp" />
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <gradient android:angle="90" android:endColor="#dc3940" android:startColor="#eb1923" />
+            <stroke android:width="1dp" android:color="#303030" />
+            <corners android:radius="5dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 
     <item>
         <shape>
-            <gradient
-                android:angle="270"
-                android:endColor="#dc3940"
-                android:startColor="#eb1923" />
-            <corners
-                android:radius="5dp"/>
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <gradient android:angle="270" android:endColor="#dc3940" android:startColor="#eb1923" />
+            <corners android:radius="5dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 </selector>
