--- a/AugmentEPF/app/src/main/res/drawable/red_search_background.xml
+++ b/AugmentEPF/app/src/main/res/drawable/red_search_background.xml
@@ -2,20 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient
-                android:angle="90"
-                android:endColor="#dc3940"
-                android:startColor="#eb1923" />
-            <stroke
-                android:width="1dp"
-                android:color="#a7a7a7" />
-            <corners
-                android:bottomLeftRadius="10dp"/>
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <gradient android:angle="90" android:endColor="#dc3940" android:startColor="#eb1923" />
+            <stroke android:width="1dp" android:color="#a7a7a7" />
+            <corners android:bottomLeftRadius="10dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 </selector>
