--- a/AugmentEPF/app/src/main/res/drawable/white_left_button.xml
+++ b/AugmentEPF/app/src/main/res/drawable/white_left_button.xml
@@ -2,39 +2,19 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <gradient
-                android:angle="90"
-                android:endColor="#e5e5e4"
-                android:startColor="#fffeff" />
-            <stroke
-                android:width="1dp"
-                android:color="@color/grey" />
-            <corners
-                android:topRightRadius="15dp"
-                android:bottomRightRadius="5dp" />
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <gradient android:angle="90" android:endColor="#e5e5e4" android:startColor="#fffeff" />
+            <stroke android:width="1dp" android:color="@color/grey" />
+            <corners android:bottomRightRadius="5dp" android:topRightRadius="15dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 
     <item>
         <shape>
-            <gradient
-                android:angle="270"
-                android:endColor="#e5e5e4"
-                android:startColor="#fffeff" />
+            <gradient android:angle="270" android:endColor="#e5e5e4" android:startColor="#fffeff" />
 
-            <corners
-                android:topRightRadius="15dp"
-                android:bottomRightRadius="5dp"/>
-            <padding
-                android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="10dp" />
+            <corners android:bottomRightRadius="5dp" android:topRightRadius="15dp" />
+            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape>
     </item>
 </selector>
