--- a/AugmentEPF/app/src/main/res/layout/activity_admin.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_admin.xml
@@ -116,22 +116,22 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/zoom"/>
+                android:text="@string/zoom" />
 
             <SeekBar
                 android:id="@+id/zoom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:max="10"/>
+                android:max="10" />
 
         </LinearLayout>
 
