--- a/AugmentEPF/app/src/main/res/layout/activity_calendar.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_calendar.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linearLayout"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.filiereticsa.arc.augmentepf.activities.CalendarActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.filiereticsa.arc.augmentepf.activities.CalendarActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,54 +14,54 @@
         <Button
             android:id="@+id/ical_button"
             style="@android:style/Widget.Button"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
             android:background="@drawable/red_button"
             android:onClick="onIcalClicked"
             android:text="@string/ical"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_weight="1"
-            android:layout_margin="2dp"/>
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/previous_button"
             style="@android:style/Widget.Button"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
             android:background="@drawable/red_button"
             android:onClick="onPreviousClicked"
             android:text="@string/previous"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_weight="1"
-            android:layout_margin="2dp"/>
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/current_button"
             style="@android:style/Widget.Button"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
             android:background="@drawable/red_button"
             android:onClick="onCurrentClicked"
             android:text="@string/current"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_weight="1"
-            android:layout_margin="2dp"/>
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/next_button"
             style="@android:style/Widget.Button"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
             android:background="@drawable/red_button"
             android:onClick="onNextClicked"
             android:text="@string/next"
             android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_weight="1"
-            android:layout_margin="2dp"/>
+            android:textSize="18sp" />
 
 
     </LinearLayout>
@@ -71,13 +71,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+        android:textStyle="bold" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <HorizontalScrollView
             android:id="@+id/gridLayoutContainer"
             android:layout_width="wrap_content"
