--- a/AugmentEPF/app/src/main/res/layout/activity_connection.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_connection.xml
@@ -4,36 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.filiereticsa.arc.augmentepf.activities.ConnectionActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.filiereticsa.arc.augmentepf.activities.ConnectionActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="9"/>
+        android:layout_weight="9" />
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/user_icon"
+        android:layout_gravity="center_horizontal"
         android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal" />
+        android:src="@drawable/user_icon" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/colorLightGrey"
-        android:padding="15dp"
         android:layout_margin="20dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@color/colorLightGrey"
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login"
-            android:textSize="16sp"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/login"
@@ -45,11 +45,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/colorLightGrey"
-        android:padding="15dp"
         android:layout_margin="20dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@color/colorLightGrey"
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -61,14 +61,14 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:passwordToggleEnabled ="true">
+            app:passwordToggleEnabled="true">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
@@ -89,16 +89,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/no_account"
-            android:textSize="16sp"
+            android:layout_margin="10dp"
             android:padding="10dp"
-            android:layout_margin="10dp"/>
+            android:text="@string/no_account"
+            android:textSize="16sp" />
 
         <Button
             style="@android:style/Widget.Button"
@@ -108,13 +108,13 @@
             android:background="@drawable/grey_button"
             android:onClick="onCreateAccountClick"
             android:padding="10dp"
-            android:textSize="16sp"
             android:text="@string/create"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="9"/>
+        android:layout_weight="9" />
 </LinearLayout>
