--- a/AugmentEPF/app/src/main/res/layout/activity_home_page.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_home_page.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rootview"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.filiereticsa.arc.augmentepf.activities.HomePageActivity">
 
     <fragment
-        android:name="com.filiereticsa.arc.augmentepf.localization.LocalizationFragment"
-        android:id="@+id/localization_fragment"
+        android:id="@+id/camera_fragment"
+        android:name="com.filiereticsa.arc.augmentepf.fragments.CameraFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
+    <fragment
+        android:id="@+id/localization_fragment"
+        android:name="com.filiereticsa.arc.augmentepf.localization.LocalizationFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <SlidingDrawer
         android:id="@+id/leftSlidingDrawer"
@@ -87,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="@dimen/fab_margin"
-        app:srcCompat="@drawable/full_screen_icon"
-        android:onClick="onFullScreenClick"/>
+        android:onClick="onFullScreenClick"
+        app:srcCompat="@drawable/full_screen_icon" />
 
 </FrameLayout>
