--- a/AugmentEPF/app/src/main/res/layout/dialog_change_email.xml
+++ b/AugmentEPF/app/src/main/res/layout/dialog_change_email.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <!-- The new email field -->
     <android.support.design.widget.TextInputLayout
@@ -14,12 +14,12 @@
             android:id="@+id/newEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="16dp"
-            android:inputType="textEmailAddress"
-            android:hint="@string/newChangeMailButton"/>
+            android:layout_marginTop="4dp"
+            android:hint="@string/newChangeMailButton"
+            android:inputType="textEmailAddress" />
     </android.support.design.widget.TextInputLayout>
 
     <!-- The confirmation of email field  -->
@@ -31,12 +31,12 @@
             android:id="@+id/confirmEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="16dp"
-            android:inputType="textEmailAddress"
-            android:hint="@string/confirmChangeMailButton"/>
+            android:layout_marginTop="4dp"
+            android:hint="@string/confirmChangeMailButton"
+            android:inputType="textEmailAddress" />
     </android.support.design.widget.TextInputLayout>
 
     <!-- Enter the password to confirm the change -->
@@ -49,12 +49,12 @@
             android:id="@+id/pwForMail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
-            android:inputType="textPassword"
+            android:layout_marginTop="16dp"
             android:fontFamily="sans-serif"
-            android:hint="@string/pwForMail" />
+            android:hint="@string/pwForMail"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 </LinearLayout>
