--- a/AugmentEPF/app/src/main/res/layout/dialog_ical_link_calendar_activity.xml
+++ b/AugmentEPF/app/src/main/res/layout/dialog_ical_link_calendar_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <!-- iCal link field  -->
     <android.support.design.widget.TextInputLayout
@@ -12,13 +13,13 @@
             android:id="@+id/ical_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="16dp"
-            android:inputType="textPassword"
+            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
-            android:hint="@string/ical_link"/>
+            android:hint="@string/ical_link"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
