--- a/AugmentEPF/app/src/main/res/layout/dialog_reset_password.xml
+++ b/AugmentEPF/app/src/main/res/layout/dialog_reset_password.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <!-- Old Password field -->
     <android.support.design.widget.TextInputLayout
@@ -15,13 +15,13 @@
             android:id="@+id/oldPw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
-            android:inputType="textPassword"
+            android:layout_marginTop="16dp"
             android:fontFamily="sans-serif"
-            android:hint="@string/oldResetPwButton" />
+            android:hint="@string/oldResetPwButton"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 
     <!-- The new password password field -->
@@ -34,13 +34,13 @@
             android:id="@+id/newPw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="16dp"
-            android:inputType="textPassword"
+            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
-            android:hint="@string/newResetPwButton"/>
+            android:hint="@string/newResetPwButton"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 
     <!-- The confirmation password field  -->
@@ -53,12 +53,12 @@
             android:id="@+id/confirmPw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="16dp"
-            android:inputType="textPassword"
+            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
-            android:hint="@string/confirmNewResetPwButton"/>
+            android:hint="@string/confirmNewResetPwButton"
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 </LinearLayout>
