Modification of the guidance, history view. Settings for email have a request like specific attribute.

--- a/AugmentEPF/app/src/main/res/layout/activity_path_consultation.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_path_consultation.xml
@@ -4,6 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.filiereticsa.arc.augmentepf.activities.PathConsultationActivity">
+
+    <ListView
+        android:id="@+id/path_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="19"
+        android:layout_gravity="top"/>
+
+    <Button
+        style="@android:style/Widget.Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:background="@drawable/grey_button"
+        android:text="Show more" />
 
 </LinearLayout>
