--- a/AugmentEPF/app/src/main/res/layout/activity_path_planning.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_path_planning.xml
@@ -1,212 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:padding="5dp">
-
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/path_icon"
-        android:layout_gravity="center_horizontal" />
-
-    <!--============================================================================================
-                                       When the path is plan
-    =============================================================================================-->
-    <!-- The title -->
-    <TextView
-        android:text="@string/text_when"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@color/colorPrimaryDark"/>
-
-    <!-- The field for the user (date & hour) -->
+    android:layout_width="match_parent">
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dip"
-        android:layout_gravity="center_horizontal">
-
-        <!-- Button to choose a date -->
-        <Button
-            android:id="@+id/dateButton"
-            style="@android:style/Widget.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/grey_button"
-            android:onClick="setDepartureDate"
-            android:text="@string/text_dateButton"
-            android:textSize="16sp" />
-
-        <!-- Button to choose an hour -->
-        <Button
-            android:id="@+id/hourButton"
-            style="@android:style/Widget.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/grey_button"
-            android:onClick="setDepartureHour"
-            android:text="@string/text_hourButton"
-            android:textSize="16sp" />
-    </LinearLayout>
-    <!--=========================================================================================-->
-
-
-    <!--============================================================================================
-                                        Arrival position
-    =============================================================================================-->
-    <!-- The title -->
-    <TextView
-        android:text="@string/text_classroom"
-        android:layout_marginTop="20dip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="16sp"/>
-
-    <!-- The autocompletion fiel to search a classroom like destination -->
-    <AutoCompleteTextView
-        android:id="@+id/search_classroom"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:textSize="16sp"/>
-    <!--=========================================================================================-->
+        android:layout_height="match_parent"
+        android:padding="5dp">
 
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/path_icon"
+            android:layout_gravity="center_horizontal" />
 
-    <!--============================================================================================
-                                             Warning
-    =============================================================================================-->
-    <!--____________________________________________________________________________________________
-                                          Switch button
-    _____________________________________________________________________________________________-->
-    <!-- The field for the switch button -->
-    <LinearLayout
-        android:layout_marginTop="20dip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical"
-        android:textSize="16sp">
-
+        <!--============================================================================================
+                                           When the path is plan
+        =============================================================================================-->
         <!-- The title -->
         <TextView
-            android:text="@string/text_warning"
+            android:text="@string/text_when"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="16sp"/>
-
-        <!-- The switch button -->
-        <Switch
-            android:layout_gravity="right"
-            android:layout_weight="1"
-            android:id="@+id/switch_warning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="setWarningDisplay"/>
-    </LinearLayout>
-
-    <!-- The field for the switch button -->
-    <LinearLayout
-        android:id="@+id/warningLayout"
-        android:layout_marginTop="20dip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+            android:textSize="16sp"
+            android:textColor="@color/colorPrimaryDark"/>
 
         <!-- The field for the user (date & hour) -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="20dip"
             android:layout_gravity="center_horizontal">
-
-            <!-- Visibility, enabled -->
 
             <!-- Button to choose a date -->
             <Button
-                android:id="@+id/warningDateButton"
+                android:id="@+id/dateButton"
                 style="@android:style/Widget.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/grey_button"
-                android:onClick="setWarningDate"
+                android:onClick="setDepartureDate"
                 android:text="@string/text_dateButton"
-                android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp" />
 
             <!-- Button to choose an hour -->
             <Button
-                android:id="@+id/warningHourButton"
+                android:id="@+id/hourButton"
                 style="@android:style/Widget.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:background="@drawable/grey_button"
-                android:onClick="setWarningHour"
+                android:onClick="setDepartureHour"
                 android:text="@string/text_hourButton"
-                android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp" />
+        </LinearLayout>
+        <!--=========================================================================================-->
+
+
+        <!--============================================================================================
+                                            Arrival position
+        =============================================================================================-->
+        <!-- The title -->
+        <TextView
+            android:text="@string/text_classroom"
+            android:layout_marginTop="20dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp"/>
+
+        <!-- The autocompletion fiel to search a classroom like destination -->
+        <AutoCompleteTextView
+            android:id="@+id/search_classroom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:textSize="16sp"/>
+        <!--=========================================================================================-->
+
+
+        <!--============================================================================================
+                                                 Warning
+        =============================================================================================-->
+        <!--____________________________________________________________________________________________
+                                              Switch button
+        _____________________________________________________________________________________________-->
+        <!-- The field for the switch button -->
+        <LinearLayout
+            android:layout_marginTop="20dip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical"
+            android:textSize="16sp">
+
+            <!-- The title -->
+            <TextView
+                android:text="@string/text_warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp"/>
+
+            <!-- The switch button -->
+            <Switch
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:id="@+id/switch_warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="setWarningDisplay"/>
         </LinearLayout>
 
         <!-- The field for the switch button -->
         <LinearLayout
+            android:id="@+id/warningLayout"
             android:layout_marginTop="20dip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical">
 
-            <!-- The title -->
-            <TextView
-                android:text="@string/text_warning_alerts"
-                android:textColor="@color/colorPrimaryDark"
+            <!-- The field for the user (date & hour) -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:textSize="16sp"/>
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal">
 
-            <!-- The list of different alerts -->
-            <Spinner
-                android:id="@+id/warningAlerts"
-                android:layout_marginTop="10dip"
+                <!-- Visibility, enabled -->
+
+                <!-- Button to choose a date -->
+                <Button
+                    android:id="@+id/warningDateButton"
+                    style="@android:style/Widget.Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/grey_button"
+                    android:onClick="setWarningDate"
+                    android:text="@string/text_dateButton"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
+
+                <!-- Button to choose an hour -->
+                <Button
+                    android:id="@+id/warningHourButton"
+                    style="@android:style/Widget.Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/grey_button"
+                    android:onClick="setWarningHour"
+                    android:text="@string/text_hourButton"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <!-- The field for the switch button -->
+            <LinearLayout
+                android:layout_marginTop="20dip"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:entries="@array/alerts"/>
+                android:orientation="vertical"
+                android:layout_gravity="center_vertical">
+
+                <!-- The title -->
+                <TextView
+                    android:text="@string/text_warning_alerts"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:textSize="16sp"/>
+
+                <!-- The list of different alerts -->
+                <Spinner
+                    android:id="@+id/warningAlerts"
+                    android:layout_marginTop="10dip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/alerts"/>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-    <!--_________________________________________________________________________________________-->
-    <!--=========================================================================================-->
+        <!--_________________________________________________________________________________________-->
+        <!--=========================================================================================-->
 
 
-    <!--============================================================================================
-                                       Button to validate
-    =============================================================================================-->
-    <LinearLayout
-        android:layout_marginTop="20dip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="right">
-
-        <Button
-            android:id="@+id/button_send"
-            style="@android:style/Widget.Button"
+        <!--============================================================================================
+                                           Button to validate
+        =============================================================================================-->
+        <LinearLayout
+            android:layout_marginTop="20dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_weight="1"
-            android:background="@drawable/red_button"
-            android:onClick="sendThePath"
-            android:textColor="@color/white"
-            android:text="@string/text_validate"
-            android:textSize="16sp"/>
+            android:orientation="horizontal"
+            android:layout_gravity="right">
+
+            <Button
+                android:id="@+id/button_send"
+                style="@android:style/Widget.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_button"
+                android:onClick="sendThePath"
+                android:textColor="@color/white"
+                android:text="@string/text_validate"
+                android:textSize="16sp"/>
+        </LinearLayout>
+        <!--=========================================================================================-->
     </LinearLayout>
-    <!--=========================================================================================-->
-</LinearLayout>
+</ScrollView>
