--- a/AugmentEPF/app/src/main/res/layout/activity_contact.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_contact.xml
@@ -1,82 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="20dp">
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/description"
-        android:textSize="16sp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"/>
-
-    <ImageView
-        android:layout_width="210dp"
-        android:layout_height="90dp"
-        android:src="@drawable/arc_logo"
-        android:layout_gravity="center_horizontal"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/partner_with"
-        android:textSize="16sp"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="bold"/>
-
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:src="@drawable/epf_logo"
-        android:layout_gravity="center_horizontal"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/contacts_info"
-        android:textSize="16sp"
-        android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="bold"/>
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp">
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/description"
+            android:textSize="16sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimaryDark"/>
+
+        <ImageView
+            android:layout_width="210dp"
+            android:layout_height="90dp"
+            android:src="@drawable/arc_logo"
+            android:layout_gravity="center_horizontal"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/partner_with"
+                android:textSize="14sp"
+                android:layout_margin="15dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="left"
+                android:layout_weight="1"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/localisation_system"
+                android:textSize="14sp"
+                android:layout_margin="15dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="70dp"
+                android:layout_weight="1"
+                android:src="@drawable/epf_logo"
+                android:layout_gravity="center"/>
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="70dp"
+                android:layout_weight="1"
+                android:src="@drawable/granite_apps_logo"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/contacts_mails_left"
-            android:textSize="12sp"
-            android:layout_margin="5dp"
-            android:layout_gravity="left|center_vertical"
+            android:text="@string/contacts_info"
+            android:textSize="16sp"
+            android:layout_margin="10dp"
+            android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:layout_weight="1"/>
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/contacts_mails_right"
-            android:textSize="12sp"
-            android:layout_margin="5dp"
-            android:layout_gravity="right|center_vertical"
-            android:gravity="center"
-            android:layout_weight="1"/>
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/contacts_mails_left"
+                android:textSize="12sp"
+                android:layout_margin="5dp"
+                android:layout_gravity="left|center_vertical"
+                android:gravity="center"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/contacts_mails_right"
+                android:textSize="12sp"
+                android:layout_margin="5dp"
+                android:layout_gravity="right|center_vertical"
+                android:gravity="center"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
