Secured AdminActivity access to admins only, fixed text zones to accept single lines only

--- a/AugmentEPF/app/src/main/res/layout/dialog_ical_link_calendar_activity.xml
+++ b/AugmentEPF/app/src/main/res/layout/dialog_ical_link_calendar_activity.xml
@@ -19,7 +19,9 @@
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:hint="@string/ical_link"
-            android:inputType="textPassword" />
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
