--- a/AugmentEPF/app/src/main/res/layout/dialog_reset_password.xml
+++ b/AugmentEPF/app/src/main/res/layout/dialog_reset_password.xml
@@ -21,7 +21,9 @@
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif"
             android:hint="@string/oldResetPwButton"
-            android:inputType="textPassword" />
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <!-- The new password password field -->
@@ -40,7 +42,9 @@
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:hint="@string/newResetPwButton"
-            android:inputType="textPassword" />
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <!-- The confirmation password field  -->
@@ -59,6 +63,8 @@
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:hint="@string/confirmNewResetPwButton"
-            android:inputType="textPassword" />
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 </LinearLayout>
