--- a/AugmentEPF/app/src/main/res/layout/activity_connection.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_connection.xml
@@ -39,6 +39,8 @@
             android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:singleLine="true"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -67,7 +69,9 @@
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionDone"
                 android:inputType="textPassword"
+                android:singleLine="true"
                 android:textSize="16sp" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
