--- a/AugmentEPF/app/src/main/res/layout/activity_path_planning.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_path_planning.xml
@@ -78,6 +78,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dip"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
             android:textSize="16sp" />
         <!--=========================================================================================-->
 
