--- a/AugmentEPF/app/src/main/res/layout/dialog_change_email.xml
+++ b/AugmentEPF/app/src/main/res/layout/dialog_change_email.xml
@@ -19,7 +19,9 @@
             android:layout_marginRight="4dp"
             android:layout_marginTop="4dp"
             android:hint="@string/newChangeMailButton"
-            android:inputType="textEmailAddress" />
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <!-- The confirmation of email field  -->
@@ -36,7 +38,9 @@
             android:layout_marginRight="4dp"
             android:layout_marginTop="4dp"
             android:hint="@string/confirmChangeMailButton"
-            android:inputType="textEmailAddress" />
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <!-- Enter the password to confirm the change -->
@@ -55,6 +59,8 @@
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif"
             android:hint="@string/pwForMail"
-            android:inputType="textPassword" />
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 </LinearLayout>
