Deboggage of LocalizationFragment & CameraFragment in order to find a solution about the first direction instruction which isn't display

--- a/AugmentEPF/app/src/main/res/layout/fragment_search.xml
+++ b/AugmentEPF/app/src/main/res/layout/fragment_search.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical"
     tools:context="com.filiereticsa.arc.augmentepf.fragments.SearchFragment">
 
-    <ScrollView
+    <!--<ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content">-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,6 +107,6 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    <!--</ScrollView>-->
 
 </FrameLayout>
