--- a/AugmentEPF/app/src/main/res/layout/activity_connection.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_connection.xml
@@ -47,20 +47,21 @@
                 android:maxLines="1"
                 android:orientation="vertical"
                 android:padding="15dp"
-                android:textSize="16sp" />
+                android:textSize="16sp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/login"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
 
-            <EditText
-                android:id="@+id/login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp" />
+                <EditText
+                    android:id="@+id/login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -110,6 +111,7 @@
                         android:text="@string/save_cred" />
 
                     <CheckBox
+                        android:layout_marginTop="5dp"
                         android:id="@+id/autoLogCheckBox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
