--- a/AugmentEPF/app/src/main/res/layout/activity_connection.xml
+++ b/AugmentEPF/app/src/main/res/layout/activity_connection.xml
@@ -60,7 +60,10 @@
                     android:id="@+id/login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:maxLines="1"
+                    android:inputType="text"
+                    android:imeOptions="actionNext"/>
             </LinearLayout>
 
             <LinearLayout
@@ -89,7 +92,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:maxLines="1"
+                        android:imeOptions="actionDone"/>
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
