--- a/AugmentEPF/app/src/main/res/layout/fragment_options.xml
+++ b/AugmentEPF/app/src/main/res/layout/fragment_options.xml
@@ -10,10 +10,11 @@
     <Button
         android:id="@+id/connect_button"
         style="@android:style/Widget.Button"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:background="@drawable/red_button"
@@ -61,18 +62,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="5"
         android:orientation="vertical">
-
-        <Button
-            android:id="@+id/planned_trajectory_button"
-            style="@android:style/Widget.Button"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/white_left_button"
-            android:text="@string/planned_trajectory"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp" />
 
         <Button
             android:id="@+id/plan_trajectory_button"
